--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,6 @@ body {
 	position: relative;
 }
 
-body a {
-	text-decoration: none;
-}
-
-body ul {
-	list-style: none;
-}
 
 .container {
 	width: 940px;
@@ -148,6 +141,7 @@ input[type="radio"].visually-hidden{
 
 .main-menu a {
 	color: #ffffff;
+	text-decoration: none;
 }
 
 .bookmarks,
@@ -261,6 +255,7 @@ input[type="radio"].visually-hidden{
 	padding: 0;
 	display: flex;
 	max-width: 280px;
+	list-style: none;
 }
 
 .user-navigation a {
@@ -271,6 +266,7 @@ input[type="radio"].visually-hidden{
 	padding: 10px 24px 11px 24px;
 	margin: 0 10px 0 0;
 	position: relative;
+	text-decoration: none;
 }
 
 .user-navigation .come-in {
@@ -318,6 +314,7 @@ input[type="radio"].visually-hidden{
 	display: flex;
 	box-shadow: inset 0px -5px 0 0 #293449;
 	justify-content: space-between;
+	list-style: none;
 }
 
 .top-navigation li {
@@ -330,6 +327,7 @@ input[type="radio"].visually-hidden{
 	padding-top: 19px;
 	padding-bottom: 23px;
 	color: #ffffff;
+	text-decoration: none;
 }
 
 .top-navigation a:hover {
@@ -351,6 +349,7 @@ input[type="radio"].visually-hidden{
 	margin: 0;
 	padding:0;
 	justify-content: space-between;
+	list-style: none;
 }
 
 .catalog-goods-item {
@@ -417,6 +416,7 @@ input[type="radio"].visually-hidden{
 	color: #ffffff;
 	text-transform: uppercase;
 	border-radius: 2px;
+	text-decoration: none;
 }
 
 .materials-item {
@@ -549,6 +549,7 @@ input[type="radio"].visually-hidden{
 	padding: 10px 0px 10px 0px;
 	width: 195px;
 	text-align: center;
+	text-decoration: none;
 }
 
 .slider-item .button:hover,
@@ -592,6 +593,7 @@ input[type="radio"].visually-hidden{
 	margin: 0;
 	padding: 0;
 	padding-left: 20px;
+	list-style: none;
 }
 
 .discounts-item {
@@ -645,6 +647,7 @@ input[type="radio"].visually-hidden{
 	margin: 0;
 	margin-top: 20px;
 	margin-bottom: 3px;
+	list-style: none;
 }
 
 .wrapper-for-headline {
@@ -668,6 +671,7 @@ input[type="radio"].visually-hidden{
 	padding: 11px 0px 10px 0px;
 	width: 253px;
 	text-align: center;
+	text-decoration: none;
 }
 
 .manufacturers {
@@ -676,6 +680,7 @@ input[type="radio"].visually-hidden{
 	padding: 0;
 	margin: 0;
 	margin-bottom: 85px;
+	list-style: none;
 }
 
 .manufacturers li {
@@ -694,6 +699,7 @@ input[type="radio"].visually-hidden{
 	min-height: 142px;
 	position: relative;
 	display: block;
+	text-decoration: none;
 }
 
 .manufacturers img {
@@ -768,6 +774,7 @@ input[type="radio"].visually-hidden{
 	margin: 0;
 	margin-top: 70px;
 	padding: 0;
+	list-style: none;
 }
 
 .services-list li {
@@ -783,6 +790,7 @@ input[type="radio"].visually-hidden{
 	background-color: #32425c;
 	box-shadow: 0px 1px 0 0 #293449, 0px -1px 0 0 #405069;
 	margin-bottom: 2px;
+	text-decoration: none;
 }
 
 .services-item:hover {
@@ -790,8 +798,6 @@ input[type="radio"].visually-hidden{
 }
 
 .services-item-current {
-	display: block;
-	max-width: 200px;
 	padding: 13px 140px 19px 22px;
 	color: #32425c;
 	background-color: #ffffff;
@@ -904,6 +910,7 @@ input[type="radio"].visually-hidden{
 	padding: 0;
 	margin-top: 10px;
 	margin-bottom: 33px;
+	list-style: none;
 }
 
 .transport-companies-item {
@@ -991,6 +998,7 @@ input[type="radio"].visually-hidden{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-end;
+	list-style: none;
 }
 
 .top-footer-wrapper li {
@@ -999,10 +1007,12 @@ input[type="radio"].visually-hidden{
 
 .bottom-navigation-list a {
 	color: #f1f5f7;
+	text-decoration: none;
 }
 
 .products-list a {
 	color: #ffda96;
+	text-decoration: none;
 }
 .developer a:hover,
 .products-list a:hover,
@@ -1056,6 +1066,7 @@ input[type="radio"].visually-hidden{
 
 .bottom-footer a {
 	color: #ffd180;
+	text-decoration: none;
 }
 
 .social a:hover,
@@ -1110,6 +1121,7 @@ input[type="radio"].visually-hidden{
 	cursor: pointer;
 	padding: 15px 15px;
 	border: 0;
+	z-index: 3;
 }
 
 .modal-close::before,
@@ -1229,6 +1241,17 @@ input[type="radio"].visually-hidden{
 
 .modal-map img {
 	margin-bottom: -5px;
+	position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+	z-index: 1;
+}
+
+.modal-map iframe {
+	position: relative;
+	z-index: 2;
+	border: none;
 }
 
 .choice {
@@ -1290,10 +1313,12 @@ input[type="radio"].visually-hidden{
 	margin-top: 7px;
 	padding-left: 20px;
 	position: relative;
+	list-style: none;
 }
 
 .user-navigation-list a {
 	color: #32425c;
+	text-decoration: none;
 }
 
 .my-orders,
@@ -1340,6 +1365,7 @@ input[type="radio"].visually-hidden{
 	display: flex;
 	margin: 19px 10px 22px 0px;
 	padding: 0;
+	list-style: none;
 }
 
 .breadcrumbs li {
@@ -1352,6 +1378,7 @@ input[type="radio"].visually-hidden{
 
 .breadcrumbs a {
 	color: #000000;
+	text-decoration: none;
 }
 
 .breadcrumbs li::after {
@@ -1449,6 +1476,7 @@ input[type="radio"].visually-hidden{
 	justify-content: space-between;
 	border-bottom: 1px solid black;
 	position: relative;
+	list-style: none;
 }
 
 .price-filter-item input {
@@ -1606,11 +1634,13 @@ input[type="radio"].visually-hidden{
 	padding-right: 102px;
 	margin: 10px 0 12px 0;
 	position: relative;
+	list-style: none;
 }
 
 .sorting-list a {
 	opacity: 0.3;
 	border-bottom: 2px dotted #ee3643;
+	text-decoration: none;
 }
 
 .sorting-list .sorting-current {
@@ -1665,49 +1695,49 @@ input[type="radio"].visually-hidden{
 }
 
 .catalog-item .actions {
-  position: absolute;
-  top: 5px;
-  left: 2px;
-  width: 216px;
-  height: 88px;
-  padding: 40px 0;
-  text-align: center;
-  background-color: rgba(255,255,255,0.9);
-  z-index: 5;
-  }
+	position: absolute;
+	top: 5px;
+	left: 2px;
+	width: 216px;
+	height: 88px;
+	padding: 40px 0;
+	text-align: center;
+	background-color: rgba(255,255,255,0.9);
+	z-index: 5;
+}
 
 .catalog-item .actions .buy,
 .catalog-item .actions .bookmark {
-  display: block;
-  width: 129px;
-  margin: 0 auto;
-  margin-bottom: 7px;
-  padding: 7px 0;
-  background-color: #63a63e;
-  border: 3px solid #63a63e;
-  border-bottom-color: #367315;
-  border-radius:3px;
-  color: white;
-  font-size: 14px;
-  font-weight: normal;
-  font-family: "Cuprum", sans-serif;
-  line-height: 18px;
-  text-decoration: none;
-  text-transform: uppercase;
+	display: block;
+	width: 129px;
+	margin: 0 auto;
+	margin-bottom: 7px;
+	padding: 7px 0;
+	background-color: #63a63e;
+	border: 3px solid #63a63e;
+	border-bottom-color: #367315;
+	border-radius:3px;
+	color: white;
+	font-size: 14px;
+	font-weight: normal;
+	font-family: "Cuprum", sans-serif;
+	line-height: 18px;
+	text-decoration: none;
+	text-transform: uppercase;
 }
 
 .catalog-item .actions .bookmark {
-  color: #32425c;
-  background: white;
-  border-bottom-color: #63a63e;
+	color: #32425c;
+	background: white;
+	border-bottom-color: #63a63e;
 }
 
 .catalog-item .actions {
-  display: none;
+	display: none;
 }
 
 .catalog-item:hover .actions {
-  display: block;
+	display: block;
 }
 
 .catalog-list h3 {
@@ -1761,6 +1791,7 @@ input[type="radio"].visually-hidden{
 	color: white;
 	background: #ee3643;
 	border-radius: 3px;
+	text-decoration: none;
 }
 
 .catalog-item-button::after {
@@ -1793,6 +1824,7 @@ input[type="radio"].visually-hidden{
 	padding: 0;
 	margin: 0;
 	margin-bottom: 70px;
+	list-style: none;
 }
 
 .pagination-list a {
@@ -1803,6 +1835,7 @@ input[type="radio"].visually-hidden{
 	border: 1px solid #e5e5e5;
 	border-radius: 2px;
 	margin-right: 9px;
+	text-decoration: none;
 }
 
 .pagination-list li:last-child a {
@@ -1812,6 +1845,7 @@ input[type="radio"].visually-hidden{
 .pagination-item-current a {
 	color: #ffffff;
 	background-color: #ee3643;
+	text-decoration: none;
 }
 
 .pagination-item a:hover {
@@ -1853,6 +1887,7 @@ input[type="radio"].visually-hidden{
 	font-size: 18px;
 	box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
 	display: none;
+	z-index:30;
 }
 
 .headline-wrapper {
@@ -1894,6 +1929,7 @@ input[type="radio"].visually-hidden{
 .modal-information-wrapper a {
 	margin: 37px 0;
 	padding: 14px 60px;
+	text-decoration: none;
 }
 
 .modal-information-wrapper button {
@@ -1907,3 +1943,8 @@ input[type="radio"].visually-hidden{
 .show {
 	display: block;
 }
+
+.show-catalog {
+	display: block;
+}
+
